logs/validate.20260408-050901.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/LinProbFlatHashTableStEph.rs:591:46
    |
591 | ...                   implies !#[trigger] old_table_seq[j].spec_entry_to_map().dom().contains(*key) by {
    |                                ^

error[E0425]: cannot find type `LinProbFlatHashTableStEph` in this scope
   --> src/Chap47/LinProbFlatHashTableStEph.rs:885:30
    |
885 |     impl std::fmt::Debug for LinProbFlatHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LinProbFlatHashTableStEph` in this scope
   --> src/Chap47/LinProbFlatHashTableStEph.rs:891:32
    |
891 |     impl std::fmt::Display for LinProbFlatHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 23199MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
